--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
-    "name": "practica-validacion-formularios",
-    "private": true,
-    "dependencies": {
-        "bootstrap": "~3.2.0",
-        "jquery": "~1.11.1",
-        "jquery-validate": "~1.13.1",
-        "select2-bootstrap-css": "~1.4.6"
-    }
+  "name": "practica-validacion-formularios",
+  "private": true,
+  "dependencies": {
+    "bootstrap": "~3.2.0",
+    "jquery": "~1.11.1",
+    "jquery-validate": "~1.13.1",
+    "select2-bootstrap-css": "~1.4.6",
+    "jquery.complexify.js": "*"
+  }
 }
